--- a/power/package.json
+++ b/power/package.json
@@ -78,6 +78,7 @@
         "@angular/compiler-cli": "^12.2.7",
         "@angular/language-service": "^12.2.7",
         "@nguniversal/builders": "^12.1.0",
+        "@playwright/test": "^1.15.0",
         "@schematics/angular": "^12.2.7",
         "@types/express": "^4.17.13",
         "@types/geojson": "^7946.0.8",
@@ -110,8 +111,8 @@
         "karma-jasmine-html-reporter": "^1.7.0",
         "karma-junit-reporter": "^2.0.1",
         "node-blob": "^0.0.2",
+        "playwright": "^1.15.0",
         "postcss": "^8.3.8",
-        "protractor": "^7.0.0",
         "stylelint": "^13.13.1",
         "stylelint-config-standard": "^22.0.0",
         "ts-node": "^10.2.1",
