Einbindung der 3rdpartylicenses.txt

--- a/power/angular.json
+++ b/power/angular.json
@@ -363,6 +363,7 @@
                             "/nutzungsbedingungen",
                             "/barrierefreiheit",
                             "/notfound",
+                            "/open-source-bibliotheken",
                             "/bodenrichtwerte",
                             "/grundstuecksmarktberichte",
                             "/landesgrundstuecksmarktberichte",
