--- a/power/package.json
+++ b/power/package.json
@@ -60,7 +60,7 @@
         "rxjs": "^6.6.7",
         "rxjs-compat": "^6.6.7",
         "showdown": "^1.9.1",
-        "survey-angular": "^1.8.71",
+        "survey-angular": "=1.8.68",
         "tslib": "^2.3.1",
         "web-animations-js": "^2.3.2",
         "zone.js": "~0.11.4"
