--- a/power/angular.json
+++ b/power/angular.json
@@ -159,6 +159,12 @@
                                     "maximumError": "50kb"
                                 }
                             ],
+                            "fileReplacements": [
+                                {
+                                    "replace": "src/environments/environment.ts",
+                                    "with": "src/environments/environment.dev.ts"
+                                }
+                            ],
                             "optimization": {
                                 "scripts": true,
                                 "styles": {
