--- a/chart/values-dev.yaml
+++ b/chart/values-dev.yaml
@@ -662,8 +662,9 @@ ingress:
   ##
   annotations:
     kubernetes.io/ingress.class: kong
-    konghq.com/override: power-https-redirect
     konghq.com/plugins: power-cors,power-security-headers
+    konghq.com/protocols: https
+    konghq.com/https-redirect-status-code: "301"
 
   ## Enable TLS configuration for the hostname defined at ingress.hostname parameter
   ## TLS certificates will be retrieved from a TLS secret with name: {{- printf "%s-tls" .Values.ingress.hostname }}
