--- a/power/package.json
+++ b/power/package.json
@@ -19,23 +19,23 @@
     },
     "private": true,
     "dependencies": {
-        "@angular-devkit/core": "^12.2.9",
-        "@angular-devkit/schematics": "^12.2.9",
-        "@angular/animations": "^12.2.9",
-        "@angular/cdk": "^12.2.9",
-        "@angular/common": "^12.2.9",
-        "@angular/compiler": "^12.2.9",
-        "@angular/core": "^12.2.9",
-        "@angular/forms": "^12.2.9",
-        "@angular/localize": "^12.2.9",
-        "@angular/platform-browser": "^12.2.9",
-        "@angular/platform-browser-dynamic": "^12.2.9",
-        "@angular/platform-server": "^12.2.9",
-        "@angular/router": "^12.2.9",
-        "@angular/service-worker": "^12.2.9",
+        "@angular-devkit/core": "^12.2.11",
+        "@angular-devkit/schematics": "^12.2.11",
+        "@angular/animations": "^12.2.11",
+        "@angular/cdk": "^12.2.11",
+        "@angular/common": "^12.2.11",
+        "@angular/compiler": "^12.2.11",
+        "@angular/core": "^12.2.11",
+        "@angular/forms": "^12.2.11",
+        "@angular/localize": "^12.2.11",
+        "@angular/platform-browser": "^12.2.11",
+        "@angular/platform-browser-dynamic": "^12.2.11",
+        "@angular/platform-server": "^12.2.11",
+        "@angular/router": "^12.2.11",
+        "@angular/service-worker": "^12.2.11",
         "@juggle/resize-observer": "^3.3.1",
         "@ng-bootstrap/ng-bootstrap": "^10.0.0",
-        "@nguniversal/express-engine": "^12.1.1",
+        "@nguniversal/express-engine": "^12.1.2",
         "@turf/area": "^6.5.0",
         "@turf/buffer": "^6.5.0",
         "@turf/intersect": "^6.5.0",
@@ -43,8 +43,8 @@
         "@turf/projection": "^6.5.0",
         "@turf/union": "^6.5.0",
         "bootstrap": "^4.6.0",
-        "bootstrap-icons": "^1.5.0",
-        "core-js": "^3.18.2",
+        "bootstrap-icons": "^1.6.1",
+        "core-js": "^3.19.0",
         "echarts": "^5.2.1",
         "fuse.js": "^6.4.6",
         "geojson": "^0.5.0",
@@ -60,32 +60,32 @@
         "rxjs": "^6.6.7",
         "rxjs-compat": "^6.6.7",
         "showdown": "^1.9.1",
-        "survey-angular": "=1.8.68",
+        "survey-angular": "^1.8.73",
         "tslib": "^2.3.1",
         "web-animations-js": "^2.3.2",
         "zone.js": "~0.11.4"
     },
     "devDependencies": {
-        "@angular-devkit/architect": "^0.1202.9",
-        "@angular-devkit/build-angular": "^12.2.9",
+        "@angular-devkit/architect": "^0.1202.11",
+        "@angular-devkit/build-angular": "^12.2.11",
         "@angular-eslint/builder": "^12.5.0",
         "@angular-eslint/eslint-plugin": "^12.5.0",
         "@angular-eslint/eslint-plugin-template": "^12.5.0",
         "@angular-eslint/schematics": "^12.5.0",
         "@angular-eslint/template-parser": "^12.5.0",
-        "@angular/cli": "^12.2.9",
-        "@angular/compiler-cli": "^12.2.9",
-        "@angular/language-service": "^12.2.9",
-        "@nguniversal/builders": "^12.1.1",
-        "@playwright/test": "^1.15.2",
-        "@schematics/angular": "^12.2.9",
+        "@angular/cli": "^12.2.11",
+        "@angular/compiler-cli": "^12.2.11",
+        "@angular/language-service": "^12.2.11",
+        "@nguniversal/builders": "^12.1.2",
+        "@playwright/test": "^1.16.1",
+        "@schematics/angular": "^12.2.11",
         "@types/express": "^4.17.13",
         "@types/geojson": "^7946.0.8",
         "@types/hyphen": "^1.6.5",
-        "@types/jasmine": "^3.9.1",
+        "@types/jasmine": "^3.10.1",
         "@types/jasminewd2": "^2.0.10",
         "@types/maplibre-gl": "^1.14.0",
-        "@types/node": "^14.17.21",
+        "@types/node": "^14.17.29",
         "@types/pdfmake": "^0.1.19",
         "@types/polylabel": "^1.0.5",
         "@types/showdown": "^1.9.4",
@@ -94,27 +94,27 @@
         "create-object-url": "^1.0.2",
         "domino": "^2.1.6",
         "eslint": "^7.32.0",
-        "eslint-plugin-jsdoc": "^36.1.1",
-        "eslint-plugin-no-unsanitized": "^3.1.5",
+        "eslint-plugin-jsdoc": "^37.0.0",
+        "eslint-plugin-no-unsanitized": "^3.2.0",
         "eslint-plugin-prefer-arrow": "^1.2.3",
         "eslint-plugin-scanjs-rules": "^0.2.1",
         "express": "^4.15.2",
         "html-validate": "^6.1.0",
-        "jasmine-core": "^3.9.0",
+        "jasmine-core": "^3.10.1",
         "jasmine-reporters": "^2.5.0",
         "jasmine-spec-reporter": "^7.0.0",
-        "karma": "^6.3.4",
+        "karma": "^6.3.5",
         "karma-chrome-launcher": "^3.1.0",
         "karma-coverage": "^2.0.3",
         "karma-jasmine": "^4.0.1",
         "karma-jasmine-html-reporter": "^1.7.0",
         "karma-junit-reporter": "^2.0.1",
         "node-blob": "^0.0.2",
-        "playwright": "^1.15.2",
-        "postcss": "^8.3.9",
-        "stylelint": "^13.13.1",
-        "stylelint-config-standard": "^22.0.0",
-        "ts-node": "^10.2.1",
+        "playwright": "^1.16.1",
+        "postcss": "^8.3.11",
+        "stylelint": "^14.0.0",
+        "stylelint-config-standard": "^23.0.0",
+        "ts-node": "^10.4.0",
         "typescript": "~4.3.5"
     },
     "browser": {
