--- a/power/.stylelintrc.json
+++ b/power/.stylelintrc.json
@@ -1,5 +1,8 @@
 {
-    "extends": "stylelint-config-standard",
+    "extends": [
+        "stylelint-config-standard",
+        "stylelint-config-standard-scss"
+    ],
     "rules": {
         "function-comma-space-after": "always",
         "function-comma-space-before": "never",
@@ -17,6 +20,11 @@
         "selector-type-no-unknown": null,
         "string-quotes": "single",
         "length-zero-no-unit": null,
-        "declaration-empty-line-before": null
+        "declaration-empty-line-before": null,
+        "alpha-value-notation": null,
+        "property-no-vendor-prefix": null,
+        "shorthand-property-no-redundant-values": null,
+        "selector-class-pattern": null,
+        "color-function-notation": "legacy"
     }
 }
