--- a/power/package.json
+++ b/power/package.json
@@ -11,7 +11,7 @@
         "test": "ng test",
         "lint": "ng lint",
         "lint:html": "npx html-validate src/app/**/*.html",
-        "lint:styles": "npx stylelint \"src/app/**/*.{css,html,scss}\"",
+        "lint:styles": "npx stylelint \"src/app/**/*.{css,scss}\"",
         "dev:ssr": "ng run power:serve-ssr",
         "serve:ssr": "node dist/power/server/de/main.js",
         "build:ssr": "ng build -c production && ng run power:server:production",
@@ -114,6 +114,7 @@
         "postcss": "^8.3.11",
         "stylelint": "^14.0.0",
         "stylelint-config-standard": "^23.0.0",
+        "stylelint-config-standard-scss": "^2.0.0",
         "ts-node": "^10.4.0",
         "typescript": "~4.3.5"
     },
